--- a/css/teacher/index.css
+++ b/css/teacher/index.css
@@ -186,3 +186,130 @@ footer p {
     margin: 0;
 }
 
+/* Media Queries */
+@media screen and (max-width: 1400px) and (min-width: 1025px) {
+    .container {
+        margin-inline: 90px;
+        gap: 22px;
+    }
+    .projects, .students, .actions {
+        width: 275px;
+    }
+    .scroll {
+        max-height: 390px;
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 601px) {
+    .container {
+        margin-inline: 50px;
+        gap: 20px;
+    }
+    .projects, .students, .actions {
+        width: 250px;
+    }
+    .scroll {
+        max-height: 350px;
+    }
+    input[type="text"], textarea {
+        width: 200px;
+    }
+}
+
+/* Tablet*/
+@media screen and (max-width: 1024px) {
+    .profileInfo {
+        flex-direction: column;
+        align-items: center;
+        margin-inline: 50px;
+        text-align: center;
+    }
+
+    .logo {
+        height: 100px;
+    }
+
+    .userInfo {
+        width: 100%;
+        align-items: center;
+    }
+
+    .container {
+        flex-direction: column;
+        margin-inline: 50px;
+        height: auto;
+        gap: 30px;
+    }
+
+    .projects, .students, .actions {
+        width: 100%;
+        height: auto;
+    }
+
+    .scroll {
+        max-height: 320px;
+    }
+
+    footer{
+        margin-top: 20px;
+    }
+}
+
+/* Mobile*/
+@media screen and (max-width: 600px) {
+    .logo {
+        height: 100px;
+    }
+
+    .profileInfo {
+        margin-inline: 20px;
+        padding: 20px;
+        font-size: 16px;
+    }
+
+    .profilePhoto {
+        height: 120px;
+        width: 120px;
+    }
+
+    .container {
+        margin-inline: 20px;
+        gap: 20px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .buttons {
+        gap: 10px;
+    }
+
+    input[type="text"], textarea {
+        width: 100%;
+    }
+
+    .projects, .students {
+        width: 100%;
+        height: auto;
+        order: 0;
+    }
+
+    .actions {
+        width: 100%;
+        height: auto;
+        order: 1;
+        margin-top: auto;
+    }
+
+    .actions .action {
+        padding: 10px;
+    }
+
+    .scroll {
+        max-height: 320px;
+    }
+
+    footer {
+        order: 2;
+        margin-top: 20px;
+    }
+}
