--- a/css/student/index.css
+++ b/css/student/index.css
@@ -190,3 +190,86 @@ input[type="file"] {
     padding: 6px 12px;
     cursor: pointer;
 }
+
+
+/* Media Queries */
+
+/* Tablet*/
+@media screen and (max-width: 1024px) {
+  .profileInfo {
+      flex-direction: column;
+      align-items: center;
+      margin-inline: 50px;
+      text-align: center;
+  }
+
+  .logo {
+      height: 100px;
+  }
+
+  .userInfo {
+      width: 100%;
+      align-items: center;
+  }
+
+  .container {
+      margin-inline: 50px;
+      gap: 100px;
+  }
+
+  form{
+    display: flex;
+    gap: 10px;
+    max-width: 620px;
+  }
+  
+  .project{
+    width: 100%;
+    height: 300px;
+    min-height: 300px;
+    margin: 0;
+  }
+
+  footer{
+      margin-top: 20px;
+  }
+}
+
+
+/* Mobile*/
+@media screen and (max-width: 600px) {
+  .logo {
+      height: 100px;
+  }
+
+  .profileInfo {
+      margin-inline: 20px;
+      padding: 20px;
+      font-size: 16px;
+  }
+
+  .profilePhoto {
+      height: 120px;
+      width: 120px;
+  }
+
+  .container {
+      margin-inline: 20px;
+      gap: 100px;
+  }
+
+  form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow-y: scroll;
+    max-height: 420px;
+  }
+
+  .project {
+    width: 100%;
+    height: 200px;
+    min-height: 200px;
+    margin: 0;
+  }
+}
